--- a/blink/CMakeLists.txt
+++ b/blink/CMakeLists.txt
@@ -10,5 +10,6 @@ include_directories("${PROJECT_INCLUDE_DIR}")
 
 ### add example executable directories
 add_avr_executable(blink-avr src/blink-avr.c)
+add_avr_executable(blink-arduino src/blink-arduino.cpp)
 ### add the dependant libraries
-#avr_target_link_libraries(blink-avr ARDUINO)
+avr_target_link_libraries(blink-arduino ARDUINO)
