--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,6 +169,52 @@ add_definitions(-DARDUINO=${ARDUINO_VERSION})
 #add_definitions("-Wall -Wstrict-prototypes")
 
 ##################################################################################
+# some programmer specfic stuff
+##################################################################################
+# get status
+add_custom_target(
+  get_status
+  ${AVR_UPLOADTOOL} -p ${AVR_MCU} -c ${AVR_PROGRAMMER} -P ${AVR_UPLOADTOOL_PORT} -n -v
+  COMMENT "Get status from ${AVR_MCU}"
+)
+
+# get fuses
+add_custom_target(
+  get_fuses
+  ${AVR_UPLOADTOOL} -p ${AVR_MCU} -c ${AVR_PROGRAMMER} -P ${AVR_UPLOADTOOL_PORT} -n
+      -U lfuse:r:-:b
+      -U hfuse:r:-:b
+      -U efuse:r:-:b
+  COMMENT "Get fuses from ${AVR_MCU}"
+)
+
+# set fuses
+add_custom_target(
+  set_fuses
+  ${AVR_UPLOADTOOL} -p ${AVR_MCU} -c ${AVR_PROGRAMMER} -P ${AVR_UPLOADTOOL_PORT}
+      -U lfuse:w:${AVR_L_FUSE}:m
+      -U hfuse:w:${AVR_H_FUSE}:m
+      -U efuse:w:${AVR_E_FUSE}:m
+      COMMENT "Setup: High Fuse: ${AVR_H_FUSE} Low Fuse: ${AVR_L_FUSE} Extended Fuse: ${AVR_E_FUSE}"
+)
+
+# get oscillator calibration
+add_custom_target(
+  get_calibration
+      ${AVR_UPLOADTOOL} -p ${AVR_MCU} -c ${AVR_PROGRAMMER} -P ${AVR_UPLOADTOOL_PORT}
+      -U calibration:r:${AVR_MCU}_calib.tmp:r
+      COMMENT "Write calibration status of internal oscillator to ${AVR_MCU}_calib.tmp."
+)
+
+# set oscillator calibration
+add_custom_target(
+  set_calibration
+  ${AVR_UPLOADTOOL} -p ${AVR_MCU} -c ${AVR_PROGRAMMER} -P ${AVR_UPLOADTOOL_PORT}
+      -U calibration:w:${AVR_MCU}_calib.hex
+      COMMENT "Program calibration status of internal oscillator from ${AVR_MCU}_calib.hex."
+)
+
+##################################################################################
 # stuff specific to this project
 ##################################################################################
 set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build/${BOARD_NAME})
@@ -181,6 +227,8 @@ set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR})
 set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include
                         ${PROJECT_SOURCE_DIR}/include/variants/${BOARD_VARIANT}
 )
+
+
 
 include_directories("${PROJECT_INCLUDE_DIR}")
 include_directories("${PROJECT_SOURCE_DIR}")
