updated amc7812 to cpp, doxygen doesn't double dip

--- a/doxygen.conf
+++ b/doxygen.conf
@@ -778,7 +778,7 @@ RECURSIVE              = YES
 # Note that relative paths are relative to the directory from which doxygen is
 # run.
 
-EXCLUDE                = .git/
+EXCLUDE                = @CMAKE_SOURCE_DIR@/.git/ @CMAKE_SOURCE_DIR@/include 
 
 # The EXCLUDE_SYMLINKS tag can be used to select whether or not files or
 # directories that are symbolic links (a Unix file system feature) are excluded
@@ -796,6 +796,7 @@ EXCLUDE_SYMLINKS       = NO
 
 EXCLUDE_PATTERNS       = */Release/* \
                          */Debug/* \
+                         */examples/* \
                          */examples/* \
                          */test/* */tools/* */GSM/* \
                          */include/GSM* */include/Sd* */include/Adafruit* \
