added uIPEthernet and amc7812 udp streaming example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ project (ocs-base)
  
 #SET(BOARD_NAME "uno")
 SET(BOARD_NAME "mega2560")
-#SET(BOARD_NAME "mega")
+#SET(BOARD_NAME "mega") // older
 
 ################################################################################
 # define custom toolchain and mcu here
